// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dao v1 should create proposal correctly: proposal created 1`] = `
[
  {
    "type": "deploy",
  },
  {
    "message": {
      "body": {
        "cell": "x{13FF04DB0000000000000001C_}
 x{D00}
  x{2_}
   x{8016E70217CF2CFA95CF8EAC53D43D58747DF7ECC6B1BDDBB657113AB3E03A2AAF600000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000A_}
    x{00000000746573742070726F706F73616C}
  x{2_}
   x{8016E70217CF2CFA95CF8EAC53D43D58747DF7ECC6B1BDDBB657113AB3E03A2AAF600000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000A_}
    x{00000000746573742070726F706F73616C2032}",
        "type": "cell",
      },
      "bounce": true,
      "from": "kQAI-3FJVc_ywSuY4vq0bYrzR7S4Och4y7bTU_i5yLOB3A6P",
      "to": "kQCCJhIbZ5eZN4KUfEdeW_jRNNGutBKPiwVNQ4lkFvCk2x8p",
      "type": "internal",
      "value": 2100000000n,
    },
    "type": "received",
  },
  {
    "gasUsed": 21373n,
    "type": "processed",
  },
  {
    "messages": [
      {
        "body": {
          "cell": "x{946A98B60000000000000001}",
          "type": "cell",
        },
        "bounce": false,
        "from": "kQCCJhIbZ5eZN4KUfEdeW_jRNNGutBKPiwVNQ4lkFvCk2x8p",
        "to": "kQCHFZGIn_ux8rvaBUQ2pgUxby40W7m7n5_ToHF4Rf7PylbZ",
        "type": "internal",
        "value": 2061204000n,
      },
    ],
    "type": "sent",
  },
]
`;

exports[`dao v1 should execute proposal correctly: proposal executed 1`] = `
[
  {
    "message": {
      "body": {
        "cell": "x{17E7B8D3C_}
 x{D00}
  x{2_}
   x{80011F6E292AB9FE5825731C5F568DB15E68F69707390F1976DA6A7F173916703B8000000000000000000000000000000000000000000000000000000003B9ACA000000000000000000000000000000000000000000000000000000000000000000A_}
    x{00000000746573742070726F706F73616C}
  x{2_}
   x{8012B3B3A9D3FC4B5C62F80F98DD957DF46D5ADF361B39CA1BC6DA803B4BB6F36E0000000000000000000000000000000000000000000000000000000003B9ACA000000000000000000000000000000000000000000000000000000000000000000A_}
    x{00000000746573742070726F706F73616C2032}",
        "type": "cell",
      },
      "bounce": false,
      "from": "kQCb91TZW4E-RjP8nXu6MwBkHyQUDMw_N-3K8b5PirFOyXSQ",
      "to": "kQCCJhIbZ5eZN4KUfEdeW_jRNNGutBKPiwVNQ4lkFvCk2x8p",
      "type": "internal",
      "value": 2931484000n,
    },
    "type": "received",
  },
  {
    "gasUsed": 23954n,
    "type": "processed",
  },
  {
    "messages": [
      {
        "body": {
          "text": "test proposal",
          "type": "text",
        },
        "bounce": false,
        "from": "kQCCJhIbZ5eZN4KUfEdeW_jRNNGutBKPiwVNQ4lkFvCk2x8p",
        "to": "kQAI-3FJVc_ywSuY4vq0bYrzR7S4Och4y7bTU_i5yLOB3A6P",
        "type": "internal",
        "value": 1000000000n,
      },
    ],
    "type": "sent",
  },
  {
    "messages": [
      {
        "body": {
          "text": "test proposal 2",
          "type": "text",
        },
        "bounce": false,
        "from": "kQCCJhIbZ5eZN4KUfEdeW_jRNNGutBKPiwVNQ4lkFvCk2x8p",
        "to": "kQCVnZ1On-Ja4xfAfMbsq--jatb5sNnOUN421AHaXbebcCWH",
        "type": "internal",
        "value": 1000000000n,
      },
    ],
    "type": "sent",
  },
]
`;

exports[`dao v1 should execute proposal correctly: voting finished (agree) 1`] = `
[
  {
    "message": {
      "body": {
        "text": "Agree",
        "type": "text",
      },
      "bounce": true,
      "from": "kQAI-3FJVc_ywSuY4vq0bYrzR7S4Och4y7bTU_i5yLOB3A6P",
      "to": "kQCb91TZW4E-RjP8nXu6MwBkHyQUDMw_N-3K8b5PirFOyXSQ",
      "type": "internal",
      "value": 1000000000n,
    },
    "type": "received",
  },
  {
    "gasUsed": 8154n,
    "type": "processed",
  },
  {
    "message": {
      "body": {
        "text": "Agree",
        "type": "text",
      },
      "bounce": true,
      "from": "kQCVnZ1On-Ja4xfAfMbsq--jatb5sNnOUN421AHaXbebcCWH",
      "to": "kQCb91TZW4E-RjP8nXu6MwBkHyQUDMw_N-3K8b5PirFOyXSQ",
      "type": "internal",
      "value": 1000000000n,
    },
    "type": "received",
  },
  {
    "gasUsed": 12593n,
    "type": "processed",
  },
  {
    "messages": [
      {
        "body": {
          "cell": "x{17E7B8D3C_}
 x{D00}
  x{2_}
   x{80011F6E292AB9FE5825731C5F568DB15E68F69707390F1976DA6A7F173916703B8000000000000000000000000000000000000000000000000000000003B9ACA000000000000000000000000000000000000000000000000000000000000000000A_}
    x{00000000746573742070726F706F73616C}
  x{2_}
   x{8012B3B3A9D3FC4B5C62F80F98DD957DF46D5ADF361B39CA1BC6DA803B4BB6F36E0000000000000000000000000000000000000000000000000000000003B9ACA000000000000000000000000000000000000000000000000000000000000000000A_}
    x{00000000746573742070726F706F73616C2032}",
          "type": "cell",
        },
        "bounce": false,
        "from": "kQCb91TZW4E-RjP8nXu6MwBkHyQUDMw_N-3K8b5PirFOyXSQ",
        "to": "kQCCJhIbZ5eZN4KUfEdeW_jRNNGutBKPiwVNQ4lkFvCk2x8p",
        "type": "internal",
        "value": 2931484000n,
      },
    ],
    "type": "sent",
  },
]
`;

exports[`dao v1 should split if withdraw delayed 1`] = `
[
  {
    "type": "deploy",
  },
  {
    "message": {
      "body": {
        "cell": "x{74BB342700000000000000E4}",
        "type": "cell",
      },
      "bounce": false,
      "from": "kQC3OBC-eWfUrnx1Yp6h6sOj779mNY3u3bK4idWfAdFVe7sB",
      "to": "kQD5IetwusgRZIPy-G8x1cXTP1nMEv3GE3andopdeMLeUE1o",
      "type": "internal",
      "value": 10000000000n,
    },
    "type": "received",
  },
  {
    "gasUsed": 76547n,
    "type": "processed",
  },
  {
    "messages": [
      {
        "body": {
          "text": "1/3 of 9.9 (whales revenue share)",
          "type": "text",
        },
        "bounce": false,
        "from": "kQD5IetwusgRZIPy-G8x1cXTP1nMEv3GE3andopdeMLeUE1o",
        "to": "kQABTCJQINMOMK9EDPnEZcDqDqJplijCq6QE7qeQaU4blSwM",
        "type": "internal",
        "value": 3298604000n,
      },
    ],
    "type": "sent",
  },
  {
    "messages": [
      {
        "body": {
          "text": "1/3 of 9.9 (whales revenue share)",
          "type": "text",
        },
        "bounce": false,
        "from": "kQD5IetwusgRZIPy-G8x1cXTP1nMEv3GE3andopdeMLeUE1o",
        "to": "kQAI-3FJVc_ywSuY4vq0bYrzR7S4Och4y7bTU_i5yLOB3A6P",
        "type": "internal",
        "value": 3298604000n,
      },
    ],
    "type": "sent",
  },
  {
    "messages": [
      {
        "body": {
          "text": "1/3 of 9.9 (whales revenue share)",
          "type": "text",
        },
        "bounce": false,
        "from": "kQD5IetwusgRZIPy-G8x1cXTP1nMEv3GE3andopdeMLeUE1o",
        "to": "kQCVnZ1On-Ja4xfAfMbsq--jatb5sNnOUN421AHaXbebcCWH",
        "type": "internal",
        "value": 3298604000n,
      },
    ],
    "type": "sent",
  },
]
`;

exports[`dao v1 should split if zero balance 1`] = `
[
  {
    "type": "deploy",
  },
  {
    "message": {
      "body": {
        "cell": "x{23D421E100000000000000E4}",
        "type": "cell",
      },
      "bounce": false,
      "from": "kQC3OBC-eWfUrnx1Yp6h6sOj779mNY3u3bK4idWfAdFVe7sB",
      "to": "kQD5IetwusgRZIPy-G8x1cXTP1nMEv3GE3andopdeMLeUE1o",
      "type": "internal",
      "value": 10000000000n,
    },
    "type": "received",
  },
  {
    "gasUsed": 76434n,
    "type": "processed",
  },
  {
    "messages": [
      {
        "body": {
          "text": "1/3 of 9.9 (whales revenue share)",
          "type": "text",
        },
        "bounce": false,
        "from": "kQD5IetwusgRZIPy-G8x1cXTP1nMEv3GE3andopdeMLeUE1o",
        "to": "kQABTCJQINMOMK9EDPnEZcDqDqJplijCq6QE7qeQaU4blSwM",
        "type": "internal",
        "value": 3298604000n,
      },
    ],
    "type": "sent",
  },
  {
    "messages": [
      {
        "body": {
          "text": "1/3 of 9.9 (whales revenue share)",
          "type": "text",
        },
        "bounce": false,
        "from": "kQD5IetwusgRZIPy-G8x1cXTP1nMEv3GE3andopdeMLeUE1o",
        "to": "kQAI-3FJVc_ywSuY4vq0bYrzR7S4Och4y7bTU_i5yLOB3A6P",
        "type": "internal",
        "value": 3298604000n,
      },
    ],
    "type": "sent",
  },
  {
    "messages": [
      {
        "body": {
          "text": "1/3 of 9.9 (whales revenue share)",
          "type": "text",
        },
        "bounce": false,
        "from": "kQD5IetwusgRZIPy-G8x1cXTP1nMEv3GE3andopdeMLeUE1o",
        "to": "kQCVnZ1On-Ja4xfAfMbsq--jatb5sNnOUN421AHaXbebcCWH",
        "type": "internal",
        "value": 3298604000n,
      },
    ],
    "type": "sent",
  },
]
`;

exports[`dao v1 should split revenue correctly 1`] = `
[
  {
    "type": "deploy",
  },
  {
    "message": {
      "body": {
        "text": "Gift",
        "type": "text",
      },
      "bounce": true,
      "from": "kQC3OBC-eWfUrnx1Yp6h6sOj779mNY3u3bK4idWfAdFVe7sB",
      "to": "kQCCJhIbZ5eZN4KUfEdeW_jRNNGutBKPiwVNQ4lkFvCk2x8p",
      "type": "internal",
      "value": 2100000000n,
    },
    "type": "received",
  },
  {
    "gasUsed": 53381n,
    "type": "processed",
  },
  {
    "messages": [
      {
        "body": {
          "text": "1/2 of 2 (whales revenue share)",
          "type": "text",
        },
        "bounce": false,
        "from": "kQCCJhIbZ5eZN4KUfEdeW_jRNNGutBKPiwVNQ4lkFvCk2x8p",
        "to": "kQAI-3FJVc_ywSuY4vq0bYrzR7S4Och4y7bTU_i5yLOB3A6P",
        "type": "internal",
        "value": 998620000n,
      },
    ],
    "type": "sent",
  },
  {
    "messages": [
      {
        "body": {
          "text": "1/2 of 2 (whales revenue share)",
          "type": "text",
        },
        "bounce": false,
        "from": "kQCCJhIbZ5eZN4KUfEdeW_jRNNGutBKPiwVNQ4lkFvCk2x8p",
        "to": "kQCVnZ1On-Ja4xfAfMbsq--jatb5sNnOUN421AHaXbebcCWH",
        "type": "internal",
        "value": 998620000n,
      },
    ],
    "type": "sent",
  },
]
`;

exports[`dao v1 should terminate proposal correctly: proposal terminated 1`] = `
[
  {
    "message": {
      "body": {
        "text": "Terminated",
        "type": "text",
      },
      "bounce": false,
      "from": "kQCb91TZW4E-RjP8nXu6MwBkHyQUDMw_N-3K8b5PirFOyXSQ",
      "to": "kQCCJhIbZ5eZN4KUfEdeW_jRNNGutBKPiwVNQ4lkFvCk2x8p",
      "type": "internal",
      "value": 2931965000n,
    },
    "type": "received",
  },
  {
    "gasUsed": 5962n,
    "type": "processed",
  },
]
`;

exports[`dao v1 should terminate proposal correctly: voting finished (disagree) 1`] = `
[
  {
    "message": {
      "body": {
        "text": "Disagree",
        "type": "text",
      },
      "bounce": true,
      "from": "kQAI-3FJVc_ywSuY4vq0bYrzR7S4Och4y7bTU_i5yLOB3A6P",
      "to": "kQCb91TZW4E-RjP8nXu6MwBkHyQUDMw_N-3K8b5PirFOyXSQ",
      "type": "internal",
      "value": 1000000000n,
    },
    "type": "received",
  },
  {
    "gasUsed": 8303n,
    "type": "processed",
  },
  {
    "message": {
      "body": {
        "text": "Disagree",
        "type": "text",
      },
      "bounce": true,
      "from": "kQCVnZ1On-Ja4xfAfMbsq--jatb5sNnOUN421AHaXbebcCWH",
      "to": "kQCb91TZW4E-RjP8nXu6MwBkHyQUDMw_N-3K8b5PirFOyXSQ",
      "type": "internal",
      "value": 1000000000n,
    },
    "type": "received",
  },
  {
    "gasUsed": 14452n,
    "type": "processed",
  },
  {
    "messages": [
      {
        "body": {
          "text": "Terminated",
          "type": "text",
        },
        "bounce": false,
        "from": "kQCb91TZW4E-RjP8nXu6MwBkHyQUDMw_N-3K8b5PirFOyXSQ",
        "to": "kQCCJhIbZ5eZN4KUfEdeW_jRNNGutBKPiwVNQ4lkFvCk2x8p",
        "type": "internal",
        "value": 2931965000n,
      },
    ],
    "type": "sent",
  },
]
`;
